--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "@linus_janns/webcomponents-poc",
-  "private": false,
-  "version": "0.0.3",
+  "name": "webcomponents-storybook-example",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "files": [
-    "dist/*"
-  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -17,14 +14,18 @@
     "lit": "^2.6.1"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.8",
-    "@storybook/addon-links": "^7.0.8",
-    "@storybook/blocks": "^7.0.8",
-    "@storybook/web-components": "^7.0.8",
-    "@storybook/web-components-vite": "^7.0.8",
+    "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
+    "@storybook/addon-essentials": "^7.0.9",
+    "@storybook/addon-links": "^7.0.9",
+    "@storybook/blocks": "^7.0.9",
+    "@storybook/web-components": "^7.0.9",
+    "@storybook/web-components-vite": "^7.0.10",
+    "@storybook/web-components-webpack5": "^7.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.0.8",
+    "storybook": "^7.0.9",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
