--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=f9f8ed01c9f0"
   },
   "dependencies": {
     "lit": "^2.6.1"
@@ -23,10 +24,13 @@
     "@storybook/web-components": "^7.0.9",
     "@storybook/web-components-vite": "^7.0.10",
     "@storybook/web-components-webpack5": "^7.0.9",
+    "chromatic": "^6.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.9",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "webcomponents-storybook-example@0.0.0"
 }
