--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=f9f8ed01c9f0"
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
     "lit": "^2.6.1"
   },
   "devDependencies": {
