--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@linus_janns/webcomponents",
-  "private": true,
+  "private": false,
   "version": "0.0.1",
   "type": "module",
   "files": [
