--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -7,12 +7,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+     
       - uses: actions/checkout@v3
       # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
+      
       - run: yarn
       - run: yarn build
       - run: npm publish --access public
@@ -25,12 +27,12 @@ jobs:
         - name: Checkout repository
           uses: actions/checkout@v3
 
-        - name: install deps
-          uses: actions/setup-node@v2
+        - uses: actions/setup-node@v2
           with:
             node-version: '16.x'
-        - run: cd page
-        - run: npm ci    
+
+        - working-directory: ./page
+          run: npm ci    
             
         - name: checkout repository
           uses: peaceiris/actions-gh-pages@v3
